<resources>
    <string name="app_name">MealExplorer</string>
    <string name="ingresar">Ingresar</string>
    <string name="elaborado_por">Elaborado por: Gonzalo Alvarez / 20216352</string>
    <string name="no_internet_title">Sin conexión a Internet</string>
    <string name="no_internet_msg">Necesitas conexión a Internet para usar esta aplicación.</string>
    <string name="configuracion">Configuración</string>
    <string name="cancelar">Cancelar</string>
    <string name="categories">Categorías</string>
    <string name="meals">Platos</string>
    <string name="recipe">Receta</string>
    <string name="search_ingredient">Buscar por ingrediente (ej: chicken_breast)</string>
    <string name="buscar">Buscar</string>
    <string name="search_meal_id">Ingrese ID del plato</string>
    <string name="no_results">No se encontraron resultados.</string>
    <string name="error_loading">Error al cargar datos.</string>
    <string name="loading">Cargando…</string>
    <string name="surprise_meal">¡Plato Sorpresa!</string>
    <string name="ver_receta">Ver receta completa</string>
    <string name="cerrar">Cerrar</string>
    <string name="area">Área/Origen</string>
    <string name="instructions">Instrucciones</string>
    <string name="ingredients">Ingredientes</string>
    <string name="category_label">Categoría</string>
    <string name="meal_id_label">ID del plato</string>
    <string name="app_subtitle">Descubre recetas del mundo</string>
    <string name="shake_hint">¡Agita el teléfono para una receta sorpresa!</string>
</resources>
