<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_categories">

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.iot_lab4_20216352.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_meals"
        android:name="com.example.iot_lab4_20216352.MealsFragment"
        android:label="@string/meals"
        tools:layout="@layout/fragment_meals">
        <argument
            android:name="categoryName"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/nav_recipe"
        android:name="com.example.iot_lab4_20216352.RecipeFragment"
        android:label="@string/recipe"
        tools:layout="@layout/fragment_recipe">
        <argument
            android:name="mealId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

</navigation>
